<resources>
    <string name="app_name">lab3</string>
    <string name="article">Совпадает ли название цвета слева с цветом справа</string>
    <string name="timer">таймер</string>
    <string name="nameColor">лево</string>
    <string name="viewColor">право</string>
    <string name="start">Играть</string>
    <string name="btnYes">Да</string>
    <string name="btnNo">Нет</string>
    <string name="fontHeightMax">Крупный шрифт</string>
    <string name="fontHeightMin">Обычный шрифт</string>
    <string name="timerCount">Длительность игры</string>
    <string name="ansView">Показывать ответы</string>
    <string name="commonGame">Обычная игра</string>
    <string name="hardGame">Без ошибок</string>
    <string-array name="spinnerItems">
        <item>10</item>
        <item>30</item>
        <item>60</item>
    </string-array>
</resources>
